--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "page": "^1.11.6",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
