--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fontsource/alumni-sans": "^5.0.20",
+    "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "page": "^1.11.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
